BUT-114 Move Client ID to outer component