@@ -28,7 +28,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18</version>
                 <configuration>
+                    <!-- Fork every test because it will launch a separate AS instance -->
+                    <!--forkMode>always</forkMode-->
+                    <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                     <environmentVariables>
                         <JBOSS_HOME>${jbossHome}</JBOSS_HOME>
                     </environmentVariables>
